# dofi

./: CMakeLists.txt  DLauncher.qml  Main.qml  README.md  REUSE.toml  amimpl.cpp  amimpl.h  amlistmodel.cpp  amlistmodel.h  dhelperbase.cpp  dhelperbase.h  dmenuimpl.cpp  dmenuimpl.h  flake.nix  laitemdata.cpp  laitemdata.h  launcherlistmodel.cpp  launcherlistmodel.h  main.cpp  modelhelperimpl.cpp  modelhelperimpl.h
.reuse/: dep5
ambackend/: CMakeLists.txt  application.cpp  application.h  applicationmanager.cpp  applicationmanager.h  entry.cpp  entry.h  types.h
debian/: changelog  control  copyright  rules
nix/: default.nix  layer-shell-qt.nix
src/: CMakeLists.txt  DLauncher.qml  Main.qml  amimpl.cpp  amimpl.h  dmenu_path  dmenuimpl.cpp  dmenuimpl.h  launcherlistmodel.cpp  launcherlistmodel.h  main.cpp  modelhelperimpl.cpp  modelhelperimpl.h
src/ambackend/: CMakeLists.txt  application.cpp  application.h  applicationmanager.cpp  applicationmanager.h  entry.h  types.h
